# morgan-course-api

./: .gitignore  README.md  SUBJECT_ABBREVIATION_MAP.md  pyproject.toml  setup.py
morgan_course_api/: api.py  utils.py
morgan_course_data/: api.py  db.py  types.py
tests/: test_morgan_course_data.py
