[project]
name = "morgan-course-data"
version = "0.1.4"
description = "A Python package to query and manage Morgan State University's course data."
readme = "README.md"
authors = [
    { name = "Clyde Tandjong", email = "cltandjong@gmail.com" }
]
dependencies = [
    "pymongo"
]

[project.urls]
Homepage = "https://github.com/clydewtt/morgan-course-api"